--- a/package.json
+++ b/package.json
@@ -21,19 +21,21 @@
     "expo-asset": "~8.1.7",
     "expo-constants": "~9.1.1",
     "expo-font": "~8.2.1",
+    "expo-image-picker": "~8.3.0",
     "expo-linking": "^1.0.1",
+    "expo-permissions": "~9.0.1",
     "expo-splash-screen": "~0.3.1",
     "expo-status-bar": "^1.0.2",
     "expo-web-browser": "~8.3.1",
+    "mobx": "^5.15.4",
+    "mobx-react-lite": "^2.0.7",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.1.tar.gz",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
-    "react-native-web": "~0.11.7",
-    "expo-permissions": "~9.0.1",
-    "expo-image-picker": "~8.3.0"
+    "react-native-web": "~0.11.7"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
