--- a/package.json
+++ b/package.json
@@ -13,20 +13,26 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^10.0.0",
+    "@react-native-community/async-storage": "^1.11.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.6.1",
     "@react-navigation/native": "^5.6.1",
     "@react-navigation/stack": "^5.6.2",
+    "@tensorflow-models/coco-ssd": "^2.0.4",
+    "@tensorflow/tfjs": "^2.0.1",
+    "@tensorflow/tfjs-react-native": "^0.3.0",
     "expo": "~38.0.8",
     "expo-asset": "~8.1.7",
     "expo-constants": "~9.1.1",
     "expo-font": "~8.2.1",
+    "expo-gl": "^8.3.1",
     "expo-image-picker": "~8.3.0",
     "expo-linking": "^1.0.1",
     "expo-permissions": "~9.0.1",
     "expo-splash-screen": "~0.3.1",
     "expo-status-bar": "^1.0.2",
     "expo-web-browser": "~8.3.1",
+    "jpeg-js": "^0.4.1",
     "mobx": "^5.15.4",
     "mobx-react-lite": "^2.0.7",
     "react": "~16.11.0",
