--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tensorflow/tfjs-react-native": "^0.3.0",
     "expo": "~38.0.8",
     "expo-asset": "~8.1.7",
+    "expo-camera": "~8.3.1",
     "expo-constants": "~9.1.1",
     "expo-font": "~8.2.1",
     "expo-gl": "^8.3.1",
@@ -40,10 +41,11 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.1.tar.gz",
     "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-power-translator": "^1.1.1",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
     "react-native-web": "~0.11.7",
-    "expo-camera": "~8.3.1"
+    "uninstall": "0.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
